--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 anyhow = "1.0"
 axum = { version = "0.7" }
 axum-macros = "0.4"
+borsh = "1"
 chrono = "0.4"
 futures = "0.3"
 metrics = "0.24"
