--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ chrono = "0.4"
 futures = "0.3"
 metrics = "0.24"
 metrics-exporter-prometheus = "0.16"
+rand = "0.8"
 redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "aio"] }
 reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
