--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0"
 axum = { version = "0.7" }
 axum-macros = "0.4"
 borsh = "1"
+bytemuck = "1"
 chrono = "0.4"
 futures = "0.3"
 metrics = "0.24"
@@ -27,3 +28,4 @@ thiserror = "2"
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+base64 = "0.22"
