--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ axum-macros = "0.4"
 borsh = "1"
 bytemuck = "1"
 chrono = "0.4"
+enumflags2 = "0.7"
 futures = "0.3"
 metrics = "0.24"
 metrics-exporter-prometheus = "0.16"
@@ -29,3 +30,7 @@ tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 base64 = "0.22"
+serum = "0.4"
+sol_account_decoder = { path = "../sol_account_decoder/" }
+solana-address-lookup-table-program = "2"
+rayon = "1"
